--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: zip semaphore-ci-notifier.zip *
-      - uses: trmcnvn/chrome-addon@v1
-        with:
-          # extension is the extension ID
-          extension: fidjidielhnphocjcnbccipbjikemnpl
-          zip: semaphore-ci-notifier.zip
-          client-id: ${{ secrets.CHROME_CLIENT_ID }}
-          client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
-          refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
+#       - uses: trmcnvn/chrome-addon@v1
+#         with:
+#           # extension is the extension ID
+#           extension: fidjidielhnphocjcnbccipbjikemnpl
+#           zip: semaphore-ci-notifier.zip
+#           client-id: ${{ secrets.CHROME_CLIENT_ID }}
+#           client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
+#           refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
